:nail_care: fix layout overflow
fixes #22

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,7 +20,7 @@
     rgba(255, 255, 255, 0)
   );
   height: 20vh;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
